fix: _menu.scss — align-content в use-слое

--- a/src/scss/_assets/_xtra/_elements/_mutated/_menu.scss
+++ b/src/scss/_assets/_xtra/_elements/_mutated/_menu.scss
@@ -4,6 +4,7 @@
         gap: var(--gap);
         margin: var(--margin);
         padding: var(--padding);
+        align-content: var(--align-content);
         border-radius:
             var(--border-start-start-radius, var(--border-radius))
             var(--border-start-end-radius, var(--border-radius))
